# bit

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml  todo.md
bit/: Cargo.toml
bit/src/: cli.rs  main.rs
bit/src/cli/: cli_add.rs  cli_bit_diff.rs  cli_branch.rs  cli_checkout.rs  cli_cherrypick.rs  cli_clone.rs  cli_commit.rs  cli_commit_tree.rs  cli_config.rs  cli_fetch.rs  cli_index_pack.rs  cli_init.rs  cli_log.rs  cli_ls_files.rs  cli_merge.rs  cli_merge_base.rs  cli_reflog.rs  cli_remote.rs  cli_reset.rs  cli_revlist.rs  cli_status.rs  cli_switch.rs  cli_update_index.rs
bit/src/tests/: bit_branch_tests.rs  cli_switch_tests.rs  mod.rs
bit/src/tests/bit_cat_file_tests/: mod.rs
bit/tests/repos/empty/.bit/: HEAD
bit/tests/repos/foo/: qux
docs/: NOTES.md  (+1 more)
libbit/: Cargo.toml
libbit/benches/: benchmark.rs
libbit/src/: cache.rs  checkout.rs  cherrypick.rs  commit.rs  config.rs  core.rs  debug.rs  delta.rs  diff.rs  error.rs  format.rs  fs.rs  graph.rs  hash.rs  index.rs  interner.rs  io.rs  iter.rs  lib.rs  lockfile.rs  macros.rs  merge.rs  obj.rs  odb.rs  pack.rs  path.rs  pathspec.rs  peel.rs  protocol.rs  refs.rs  remote.rs  repo.rs  reset.rs  rev.rs  serialize.rs  signature.rs  status.rs  test_utils.rs  time.rs  tls.rs  (+2 more)
libbit/src/checkout/: migration_gen_tests.rs  tests.rs
libbit/src/cmd/: bit_add.rs  bit_branch.rs  bit_cat_file.rs  bit_commit.rs  bit_commit_tree.rs  bit_hash_object.rs  bit_ls_files.rs  bit_update_index.rs  bit_write_tree.rs  mod.rs
libbit/src/cmd/tests/: mod.rs
libbit/src/commit/: tests.rs
libbit/src/config/: tests.rs
libbit/src/delta/: tests.rs
libbit/src/diff/: tests.rs  tree_diff.rs
libbit/src/graph/: dag.rs
libbit/src/graph/dag/: reverse_topological.rs  tests.rs  topological.rs
libbit/src/index/: bench.rs  index_entry.rs  index_inner.rs  reuc.rs  tests.rs  tree_cache.rs  tree_cache_tests.rs
libbit/src/io/: tests.rs
libbit/src/iter/: index_tree_iter.rs  tests.rs  tree_iter.rs  tree_iter_tests.rs  walk.rs  worktree_tree_iter.rs
libbit/src/lockfile/: tests.rs
libbit/src/merge/: tests.rs
libbit/src/odb/: tests.rs
libbit/src/pack/: indexer.rs  tests.rs  writer.rs
libbit/src/path/: tests.rs
libbit/src/refs/: ref_decorations.rs  refdb.rs  reflog.rs  tests.rs
libbit/src/remote/: clone_tests.rs  tests.rs
libbit/src/repo/: tests.rs
libbit/src/reset/: tests.rs
libbit/src/rev/: revlist.rs  revwalk.rs  revwalk_tests.rs  tests.rs
libbit/src/signature/: tests.rs
libbit/src/status/: tests.rs
libbit/src/transport/: file.rs  ssh.rs
libbit/src/xdiff/: format.rs  mod.rs  tests.rs  xdiff_format_tests.rs
libbit/tests/files/: lg2index  sample-reflog  smallindex  testcommitsingleline.commit  testtree.tree
libbit/tests/repos/difftest/.bit/: COMMIT_EDITMSG
libbit/tests/repos/difftest/.bit/logs/: HEAD
libbit/tests/repos/difftest/zs/: a.txt
libbit/tests/repos/head-on-main-not-master/.bit/: config  index
libbit/tests/repos/indextest/.bit/: index
libbit/tests/repos/logic/: Cargo.toml  log
libbit/tests/repos/logic/.bit/: config  index  packed-refs
libbit/tests/repos/logic/.bit/logs/: HEAD
libbit/tests/repos/logic/logic/: Cargo.toml
libbit/tests/repos/logic/logic-core/: Cargo.toml
libbit/tests/repos/logic/logic-core/src/: unify.rs
libbit/tests/repos/logic/logic-engine/: Cargo.toml
libbit/tests/repos/logic/logic-engine/src/: db.rs  lib.rs  solve.rs  substs.rs  unify.rs
libbit/tests/repos/logic/logic-error/: Cargo.toml
libbit/tests/repos/logic/logic-error/src/: lib.rs
libbit/tests/repos/logic/logic-ir/: Cargo.toml
libbit/tests/repos/logic/logic-ir/src/: debug.rs  interned.rs  interner.rs  lib.rs  tls.rs  unify.rs
libbit/tests/repos/logic/logic-parse/: Cargo.toml  build.rs
libbit/tests/repos/logic/logic-parse/src/: ast.rs  lib.rs  parser.lalrpop  symbol.rs
libbit/tests/repos/logic/logic-util/: Cargo.toml
libbit/tests/repos/logic/logic-util/src/: lib.rs
libbit/tests/repos/logic/logic/src/: main.rs
libbit/tests/repos/notversion0/.bit/: config
libbit/tests/repos/revwalk-test/: README.md
libbit/tests/repos/revwalk-test/.bit/: ORIG_HEAD  index
libbit/tests/repos/ribble/: Dockerfile  WeatherForecast.cs  appsettings.json
libbit/tests/repos/ribble/.bit/: packed-refs
libbit/tests/repos/ribble/Controllers/: UserController.cs
libbit/tests/repos/ribble/Data/: IRepository.cs
libbit/tests/repos/ribble/GraphQL/: ChatMutation.cs  MutationType.cs  SubscriptionType.cs  UserType.cs
libbit/tests/repos/ribble/Migrations/: 20210221041814_Init.Designer.cs  20210221041814_Init.cs  20210223075313_RenameGroupTable.Designer.cs  20210223075313_RenameGroupTable.cs
libbit/tests/repos/ribble/Models/: Group.cs  Message.cs  User.cs
libbit/tests/repos/ribble/Properties/: launchSettings.json
libbit/tests/repos/ribble/Services/: UserService.cs
libbit/tests/repos/ribble/Utils/: NullableExt.cs
src/libbit/: Cargo.toml
src/libbit/refs/heads/: master
src/libbit/src/: cli.rs  cmd.rs  config.rs  db.rs  delta.rs  diff.rs  error.rs  hash.rs  index.rs  interner.rs  io.rs  io_ext.rs  iter.rs  lib.rs  lockfile.rs  macros.rs  obj.rs  odb.rs  pack.rs  path.rs  pathspec.rs  read_ext.rs  refs.rs  repo.rs  rev.rs  serialize.rs  signature.rs  status.rs  test_utils.rs  time.rs  tls.rs  util.rs
src/libbit/src/cmd/: bit_add.rs  bit_branch.rs  bit_cat_file.rs  bit_commit.rs  bit_commit_tree.rs  bit_hash_object.rs  bit_init.rs  bit_ls_files.rs  bit_update_index.rs  bit_write_tree.rs  mod.rs  update_index.rs
src/libbit/src/delta/: tests.rs
src/libbit/src/index/: index_entry.rs  tests.rs
src/libbit/src/io/: tests.rs
src/libbit/src/iter/: tests.rs
src/libbit/src/pack/: tests.rs
src/libbit/src/path/: tests.rs
src/libbit/src/refs/: tests.rs
src/libbit/src/repo/: tests.rs
src/libbit/src/rev/: tests.rs
src/libbit/src/status/: tests.rs
src/libbit/tests/files/: index  largeindex  pack.idx  pack.pack  testcommitmultiline.commit  testcommitsingleline.commit
src/libbit/tests/repos/ribble/: .gitignore  Program.cs  RibbleChatServer.csproj  Startup.cs  docker-compose.yml
(+78 files in other folders)
