[package]
name = "bit"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2021"
default-run = "bit"

[dependencies]
libbit = { path = "../libbit" }
env_logger = "0.8.3"
regex = "1"
anyhow = { version = "1", features = ["backtrace"] }
arrayvec = "0.7"
owo-colors = "2"
tokio = { version = "1", features = ["macros"] }
git-url-parse = "0.3"

clap = { version = "3.1.6", features = ["derive"] }

[dev-dependencies]
assert_cmd = "1"
pretty_assertions = "0.7.2"

