[package]
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"
name = "libbit"
version = "0.1.0"

[features]
# use_nsec = []

[dependencies]
arr_macro = "0.1"
bit-set = "0.5"
arrayvec = "0.7.0"
hex = "0.4.2"
log = "0.4.14"
rustc-hash = "1.1.0"
libc = "0.2.88"
snailquote = "0.3.0"
num_enum = "0.5.1"
anyhow = "1.0"
scoped-tls = "1"
sha-1 = "0.9.4"
walkdir = "2.3.2"
num-traits = "0.2"
num-derive = "0.3"
sha2 = "0.9.3"
enumflags2 = "0.7.1"
smallvec = "1.6.1"
thiserror = "1.0"
typed-arena = "2"
terminal_size = "0.1"
itertools = "0.10"
git-config = "0.1.0"
bitflags = "1.2.1"
bumpalo = "3.6.1"
ignore = "0.4.17"
pathdiff = "0.2.0"
chrono = "0.4.19"
dirs = "3"
regex = "1"
lazy_static = "1.4.0"
tempfile = "3"
owo-colors = "2.0.0"
maplit = "1"
indent_write = "2"
rayon = "1.5"
indexmap = "1.6.2"
indexed_vec =  "1"
flate2 = { version = "1.0.20", features = ["zlib-ng-compat"], default-features = false }
fallible-iterator = { git = "https://github.com/andyyu2004/rust-fallible-iterator" }
diffy = { git = "https://github.com/andyyu2004/diffy" }

bit_derive = { path = "../bit_derive" }

[dev-dependencies]
quickcheck = "1"
fs_extra = " 1.2.0"
quickcheck_macros = "1"
env_logger = "0.8.3"
rand = "0.8.3"
criterion = "0.3"

[lib]
doctest = false

[[bench]]
name = "benchmark"
harness = false