[package]
name = "libbit"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
quickcheck_derive = "0.3.0"
rust-ini = "0.16"
thiserror = "1.0"
flate2 = "1.0.20"
clap = "3.0.0-beta.2"
sha2 = "0.9.3"
sha-1 = "0.9.4"
hex = "0.4.2"

[dev-dependencies]
rusty-fork = "0.3.0"
rand = "0.8.3"
quickcheck = "1"
quickcheck_macros = "1"
tempfile = "3"

