[package]
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"
name = "libbit"
version = "0.1.0"

[dependencies]
flate2 = "1.0.20"
hex = "0.4.2"
libc = "0.2.88"
num_enum = "0.5.1"
quickcheck_derive = "0.3.0"
rust-ini = "0.16"
scoped-tls = "1"
sha-1 = "0.9.4"
sha2 = "0.9.3"
smallvec = "1.6.1"
thiserror = "1.0"
typed-arena = "2"
index_vec = "0.1.2"
itertools = "0.10"
bumpalo = "3.6.1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.3"
tempfile = "3"