[package]
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"
name = "libbit"
version = "0.1.0"

[features]
# use_nsec = []

[dependencies]
flate2 = "1.0.20"
hex = "0.4.2"
log = "0.4.14"
libc = "0.2.88"
snailquote = "0.3.0"
num_enum = "0.5.1"
anyhow = "1.0"
quickcheck_derive = "0.3.0"
scoped-tls = "1"
sha-1 = "0.9.4"
sha2 = "0.9.3"
smallvec = "1.6.1"
thiserror = "1.0"
typed-arena = "2"
index_vec = "0.1.2"
itertools = "0.10"
git-config = "0.1.0"
bumpalo = "3.6.1"
ignore = "0.4.17"
pathdiff = "0.2.0"
chrono = "0.4.19"
dirs = "3"
regex = "1"
lazy_static = "1.4.0"
tempfile = "3"
fallible-iterator = "0.2.0"
colored = "2.0.0"
maplit = "1"
gitignore = "1.0.7"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.3"

[lib]
doctest = false