[package]
name = "logic-engine"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
logic-ir = { path = "../logic-ir" }
logic-error = { path = "../logic-error" }
logic-parse = { path = "../logic-parse" }
salsa = "0.16.0"
ena = "0.14"
indexed_vec = "1.2.1"
